[gd_scene load_steps=15 format=3 uid="uid://dcfnwcecgfqx7"]

[ext_resource type="Script" uid="uid://mj2pemeljci3" path="res://Scripts/main_2d.gd" id="1_61gfo"]
[ext_resource type="Script" uid="uid://bujnthksap3km" path="res://Scripts/2D/card_manager.gd" id="1_kbhl5"]
[ext_resource type="Texture2D" uid="uid://daqi4n4xwp355" path="res://Assets/2D Assets/back.png" id="3_gfyuw"]
[ext_resource type="Script" uid="uid://23mucqr8g3xy" path="res://Scripts/2D/player_hand.gd" id="4_x2dgl"]
[ext_resource type="PackedScene" uid="uid://bbd1vp3hxspss" path="res://Scenes/2D/card_slot.tscn" id="5_61gfo"]
[ext_resource type="Script" uid="uid://bg0vdxq1ieapr" path="res://Scripts/2D/deck.gd" id="6_f2efj"]
[ext_resource type="Texture2D" uid="uid://dquvn15n4atwx" path="res://Assets/2D Assets/cardBack.png" id="6_yq41h"]
[ext_resource type="Script" uid="uid://c30w0tlu61pxg" path="res://Scripts/2D/left_menu.gd" id="8_e1ypl"]
[ext_resource type="Script" uid="uid://b4oerpv5ajd21" path="res://Scripts/2D/input_manager.gd" id="8_yr5wd"]
[ext_resource type="Texture2D" uid="uid://c2knikk04vfes" path="res://Assets/2D Assets/backFullscreen.png" id="10_e1ypl"]
[ext_resource type="PackedScene" uid="uid://ded7wdp534o5o" path="res://Scenes/2D/rerolled_slot.tscn" id="11_2gnqk"]

[sub_resource type="GDScript" id="GDScript_x2dgl"]
script/source = "extends CanvasLayer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijaib"]
size = Vector2(369, 486.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2efj"]
size = Vector2(148, 239)

[node name="Main2D" type="Node2D"]
script = ExtResource("1_61gfo")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_kbhl5")

[node name="InGameMenu" type="CanvasLayer" parent="."]
script = SubResource("GDScript_x2dgl")

[node name="Button" type="Button" parent="InGameMenu"]
offset_left = 1567.0
offset_top = 320.0
offset_right = 1866.0
offset_bottom = 393.0
text = "Back to Main Menu"
metadata/_edit_use_anchors_ = true

[node name="bgImg" type="Sprite2D" parent="InGameMenu"]
modulate = Color(1, 1, 1, 0.541176)
z_index = -1
position = Vector2(1711, 263)
scale = Vector2(0.74, 0.610625)
texture = ExtResource("3_gfyuw")

[node name="Label" type="Label" parent="InGameMenu"]
offset_left = 1544.0
offset_top = 58.0
offset_right = 1884.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 28
text = "In Game Menu  
WOOOOOOOOOOOOOW"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="InGameMenu"]
position = Vector2(1504, -118)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InGameMenu/Area2D"]
position = Vector2(204.5, 378.375)
shape = SubResource("RectangleShape2D_ijaib")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_x2dgl")

[node name="UI" type="Node2D" parent="."]

[node name="Warnings" type="Label" parent="UI"]
offset_left = 875.0
offset_top = 226.0
offset_right = 1027.0
offset_bottom = 336.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="UI"]
one_shot = true

[node name="FPS" type="Label" parent="UI"]
z_index = 5
offset_left = 20.0
offset_top = 19.0
offset_right = 60.0
offset_bottom = 42.0

[node name="Ready" type="Button" parent="UI"]
offset_left = 729.0
offset_top = 62.0
offset_right = 1182.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 34
text = "READY"

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(1750, 890)
script = ExtResource("6_f2efj")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_yq41h")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_f2efj")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
offset_left = -14.0
offset_top = -52.0
offset_right = 26.0
offset_bottom = -12.0
scale = Vector2(3, 3)
text = "0"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("8_yr5wd")

[node name="LeftMenu" type="Node2D" parent="."]
script = ExtResource("8_e1ypl")

[node name="Sprite2D" type="Sprite2D" parent="LeftMenu"]
position = Vector2(185, 539)
scale = Vector2(0.74, 1.35)
texture = ExtResource("3_gfyuw")

[node name="CardSlot" parent="LeftMenu" instance=ExtResource("5_61gfo")]
z_index = 1
position = Vector2(274, 890)

[node name="CardSlot2" parent="LeftMenu" instance=ExtResource("5_61gfo")]
z_index = 1
position = Vector2(98, 890)

[node name="RerollButton" type="Button" parent="LeftMenu"]
offset_left = 111.0
offset_top = 678.0
offset_right = 262.0
offset_bottom = 751.0
theme_override_font_sizes/font_size = 30
text = "Reroll"

[node name="FullBGImage" type="Sprite2D" parent="LeftMenu"]
visible = false
modulate = Color(1, 1, 1, 0.654902)
z_index = 5
position = Vector2(961, 539)
texture = ExtResource("10_e1ypl")

[node name="RerollSlot1" parent="LeftMenu" instance=ExtResource("11_2gnqk")]
position = Vector2(650, 540)

[node name="RerollSlot2" parent="LeftMenu" instance=ExtResource("11_2gnqk")]
position = Vector2(960, 540)

[node name="RerollSlot3" parent="LeftMenu" instance=ExtResource("11_2gnqk")]
position = Vector2(1270, 540)

[node name="RerollSelect" type="Button" parent="LeftMenu"]
visible = false
z_index = 7
offset_left = 790.0
offset_top = 780.0
offset_right = 1140.0
offset_bottom = 850.0
theme_override_font_sizes/font_size = 26
text = "Select"

[connection signal="pressed" from="InGameMenu/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="UI/Timer" to="." method="_on_timer_timeout"]
[connection signal="reroll" from="LeftMenu" to="Deck" method="_on_left_menu_reroll"]
[connection signal="pressed" from="LeftMenu/RerollButton" to="LeftMenu" method="_on_reroll_button_pressed"]
[connection signal="pressed" from="LeftMenu/RerollSelect" to="Deck" method="_on_reroll_select_pressed"]
